--- a/app/views/layouts/_offcanvas.html.erb
+++ b/app/views/layouts/_offcanvas.html.erb
@@ -1,11 +1,8 @@
- <div id="site-menu">
-   <a href="#" class="toggle-nav" style="color: pink; font-size: 20px;"><i class="fa fa-times"></i></a>
-   <h2>My Menu</h1>
-   <p class="lead">Put any HTML you want here.</p>
-   <p>Style it however you want.</p>
-   
-   <ul>
-     <li>Free to scroll up and down</li>
-     <li>But not left and write</li>
-   </ul>
- </div>
+<nav class="main-nav" id="main-nav">
+  <a href="#">This</a>
+  <a href="#">Little</a>
+  <a href="#">Piggy</a>
+  <a href="#">Went</a>
+  <a href="#">To</a>
+  <a href="#">Market</a>
+</nav>
