--- a/app/views/layouts/_signed.html.erb
+++ b/app/views/layouts/_signed.html.erb
@@ -11,11 +11,19 @@
             </div> <!--col-->
 
             <div class="col-xs-6">
-              <button type="button" class="toggle-nav navbar-toggle">
+
+    <button id="main-nav" class="navbar-toggle open-menu">
                   <span class="icon-bar"></span>
                   <span class="icon-bar"></span>
+                  
                   <span class="icon-bar"></span>
-              </button>
+    </button>
+    <button class="navbar-toggle close-menu">
+                  <span class="icon-bar"></span>
+                  <span class="icon-bar"></span>
+                  
+                  <span class="icon-bar"></span>
+    </button>
 
             </div><!--col-->
         </div>
