--- a/app/views/layouts/_offcanvas.html.erb
+++ b/app/views/layouts/_offcanvas.html.erb
@@ -1,8 +1,30 @@
 <nav class="main-nav" id="main-nav">
-  <a href="#">This</a>
-  <a href="#">Little</a>
-  <a href="#">Piggy</a>
-  <a href="#">Went</a>
-  <a href="#">To</a>
-  <a href="#">Market</a>
+	<div class="col-xs-4 nav-img less-padding">
+		<img src="http://placekitten.com/48/49" class="img-circle  img-responsive pull-right">
+	</div>
+	<div class="col-xs-8 nav-text no-padding">
+		<span class="label">Venue Provider</span>
+		<h3 style="margin-top: 0">&nbsp;<%= current_supplier.first_name %></h3>
+	</div>
+		
+
+
+	<div class="col-xs-12 quick-links">
+	<h4> Quick Links </h4>
+		 <a id="home" href="<%= dashboard_path %>">
+            <span class="nav-label" id="home">Home</span>
+         </a>
+
+ 		<a id="venue-search" href="<%= venues_path %>">
+             <span class="nav-label" id="venue-search">Search</span>
+         </a>	
+
+         <%= link_to '<span class="nav-label" id="settings">My Account</span>'.html_safe, edit_supplier_registration_path, id: "set"  %>
+
+         <%= link_to '<span class="nav-label" id="log-out">Log out</span>'.html_safe, destroy_supplier_session_path, :method => :delete, id: "out"  %>
+
+     </div>
+
+
+
 </nav>
