changes on unsigned nav. issues on mobility

--- a/app/views/layouts/_unsigned.html.erb
+++ b/app/views/layouts/_unsigned.html.erb
@@ -3,7 +3,7 @@
     <div id="nav" class="navbar navbar-fixed-top no-padding">
         <div class="col-sm-12 padding-3em">
             <div class="navbar-header">
-              <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+              <button type="button" class="navbar-toggle unsigned-menu" data-toggle="collapse" data-target=".navbar-collapse">
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
@@ -18,7 +18,7 @@
               <nav id = "nav-main" role = "navigation">
                   <div class="no-padding">
                       <!--main-nav-->
-                      <div class="main-nav">
+                      <div class="main-navigation pull-right">
 
                       <ul id="unsigned" class="nav navbar-nav">              
             						<li class="dropdown">
