--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -581,7 +581,7 @@ This stylesheet forms part of the Formtastic Rails Plugin
 
 
 @media (min-width: 768px){
-	.navbar-toggle {
+	.open-menu {
 		display: block;
 		float: right;
 	
@@ -589,19 +589,80 @@ This stylesheet forms part of the Formtastic Rails Plugin
 
 }
 
+ @media (min-width: 767px){
+  
+    .navbar .navbar-nav,
+    .navbar .navbar-nav > li > a{
+      height: 68px;
+    }
+  
+  
+    .navbar .navbar-nav > li > a{
+      padding-top: 1.5em;
+      transition: all 0.3s;
+      -webkit-transition: all 0.3s;
+      -moz-transition: all 0.3s;
+      -o-transition: all 0.3s;
+    }
+  
+    .navbar-nav > li > button {
+      margin-top: 1em;
+    }
+  
+    .navbar-nav > li > .dropdown-menu {
+      width: 400px;
+    }
+  
+    .main-nav {
+      float: right;
+    }
+  
+    .navbar-nav > li > .dropdown-menu{
+      right: 0;
+      left: auto;
+      border-radius: 0;
+      margin: -1px;
+    }
+  
+    .navbar-nav > li > #sign-up-dropdown{
+      margin-top: 1.2em;
+    }
+  
+      .navbar-nav > li > #log-in-dropdown{
+      margin-top: 0.07em;
+   }
+   
+    .navbar-nav > li > .dropdown-menu > div > .button-dropdown > a{
+      color: $white
+    }
+  
+    .navbar-nav > li > .dropdown-menu > div > .button-dropdown > a:hover{
+      text-decoration: none; 
+    }
+  
+    .button-dropdown{
+      height: 50px;
+      padding: 0.4em;
+
+    text-align: center;
+    z-index: 9;
+    }
+  
+    .navbar-nav > li > .dropdown-menu > div > #event-planner{
+      background-color: $lblue;
+      margin: 0.4em 0 0.5em 0.5em;
+    }
+  
+    .navbar-nav > li > .dropdown-menu > div > #venue-provider{
+      background-color: $salmon;
+      margin: 0.4em  0.5em 0.5em 0;
+    }
+  }
 
 
 
-
-
-@media (max-width: 767px){
-	.navbar-toggle {
-		display: block;
-
-	}
 
 	
-}
 
 .fa-gray{
   font-size: 1.75em;
@@ -626,6 +687,13 @@ This stylesheet forms part of the Formtastic Rails Plugin
   /*color: rgba(89, 89, 89, 0.95); */
   color: rgb(249, 209, 97);
 }
+
+
+
+
+
+
+
 
 
 /* DASHBOARD
