Added formtastic fields to registration

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -530,8 +530,8 @@ This stylesheet forms part of the Formtastic Rails Plugin
   position: relative;
   display: block;
   float:left;
-  width:100%;
   margin:3px;
+  margin-left: -3%;
   padding:0;
   border:0;
 
