--- a/app/views/venues/_form.html.erb
+++ b/app/views/venues/_form.html.erb
@@ -90,10 +90,10 @@
   <div class="actions">
     <%= f.submit %>
   </div>
-  
+  <!--
   <%= form_for [@uploadable, @asset] do |form| %>
     <%= form.file_field :photo %>
     <%= form.submit "Submit", class: "btn btn-success"  %>
-  <% end %>
+  <% end %> -->
 
 <% end %>
