--- a/app/views/rooms/show.html.erb
+++ b/app/views/rooms/show.html.erb
@@ -41,4 +41,4 @@
 </p>
 
 <%= link_to 'Edit', edit_room_path(@room) %> |
-<%= link_to 'Back', rooms_path %>
+<%= link_to 'Back', venue_rooms_path %>
