Commented out user related show, fixed nesting path in room show

--- a/app/views/rooms/show.html.erb
+++ b/app/views/rooms/show.html.erb
@@ -40,5 +40,5 @@
   <%= @room.description %>
 </p>
 
-<%= link_to 'Edit', edit_room_path(@room) %> |
+<%= link_to 'Edit', edit_venue_room_path(@venue, @room) %> |
 <%= link_to 'Back', venue_rooms_path %>
