--- a/app/views/venues/index.html.erb
+++ b/app/views/venues/index.html.erb
@@ -47,7 +47,7 @@
         <td><%= venue.is_booked %></td>
         <td><%= venue.freeroom_count %></td>
         <td><%= venue.email %></td>
-        <td><%= venue.user_id %></td>
+        <td><%= venue.supplier_id %></td>
         <td><%= link_to 'Show', venue %></td>
         <td><%= link_to 'Edit', edit_venue_path(venue) %></td>
         <td><%= link_to 'Destroy', venue, method: :delete, data: { confirm: 'Are you sure?' } %></td>
