Fixed nesting for bookings and form, nesting path for all booking actions, nesting path for room edit

--- a/app/views/bookings/edit.html.erb
+++ b/app/views/bookings/edit.html.erb
@@ -2,5 +2,5 @@
 
 <%= render 'form' %>
 
-<%= link_to 'Show', @booking %> |
-<%= link_to 'Back', bookings_path %>
+<%= link_to 'Show', venue_room_booking_path(@venue, @room, booking) %> |
+<%= link_to 'Back', venue_room_bookings_path %>
