--- a/app/views/bookings/index.html.erb
+++ b/app/views/bookings/index.html.erb
@@ -36,9 +36,10 @@
         <td><%= booking.venue_id %></td>
         <td><%= booking.room_id %></td>
         <td><%= booking.user_id %></td>
-        <td><%= link_to 'Show', booking %></td>
-        <td><%= link_to 'Edit', edit_booking_path(booking) %></td>
-        <td><%= link_to 'Destroy', booking, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <td><%= link_to 'Show', venue_room_booking_path(@venue, @room, booking) %></td>
+        <td><%= link_to 'Edit', edit_venue_room_booking_path(@venue, @room, booking) %></td>
+        <td><%= link_to 'Delete', venue_room_booking_path(@venue, @room, booking), :class => "btn btn-sm btn-space btn-danger pull-right", method: :delete,
+        data: { confirm: 'Are you sure you want to delete this room?' } %></td>
       </tr>
     <% end %>
   </tbody>
