--- a/app/views/pages/_supplier.html.erb
+++ b/app/views/pages/_supplier.html.erb
@@ -114,7 +114,26 @@
 			</div>
 		</div>
 		<div class="panel-body">
+			<% @supplier.venues.each do |venue|  %>
 
+			<div class = "col-xs-6 no-pads">
+				<div class="dashboard-card-frame">
+					<% if venue.assets.count > 0 %>
+					<%= image_tag (Venue.find(venue.id).assets.last.photo.url(:index)), class: "dashboard-card-image" %>
+					<% else %>
+					<img src="http://placehold.it/300x200" class="dashboard-card-image">
+					<% end %>
+
+					<div class="dashboard-card-caption">
+						<div class="dashboard-card-name"><%= link_to "#{venue.name}".html_safe, venue_path(venue.id) %> </div>
+						<%= link_to '<i class="fa fa-pencil-square-o" style="margin-right: 0.6em;"></i>'.html_safe, edit_venue_path(venue.id) %> 
+						<%= link_to '<i class="fa fa-trash-o"></i>'.html_safe, venue_path(venue.id), method: :delete, confirm: "Are you sure you want to delete this venue?"%>
+						
+					</div>
+
+				</div><!--venue frame-->
+			</div><!--col-->
+			<% end %>  
 		</div><!--panel-body--> 
 	</div><!--end panel-->
 </div>
