--- a/app/views/pages/_supplier.html.erb
+++ b/app/views/pages/_supplier.html.erb
@@ -24,7 +24,7 @@
 
 		<div class="col-xs-3" style="padding: 0 0.5em 0 0.5em">
 			<div class="dashboard-flash" id="venues-count">
-				<span class="dashboard-figure"> 1</span>
+				<span class="dashboard-figure"><%= @supplier.venues.count %> </span>
 				<i class="fa fa-location-arrow fa-2x" id="venues-logo"></i>
 
 				<span class="dashboard-figure-label" id="venues"> Venues</span> 	
@@ -33,16 +33,18 @@
 
 		<div class="col-xs-3" style="padding: 0 0 0 0.5em">
 			<div class="dashboard-flash" id="rooms-count">
-				<span class="dashboard-figure"> 1</span>
+				<span class="dashboard-figure"> 
+				<% @room_count = 0 %>
+				<% @supplier.venues.each do |venue| %> 
+					<% @room_count += venue.rooms.count %>
+				<% end %>
+					<%= @room_count %>
+				</span>
 				<i class="fa fa-map-marker fa-2x" id="rooms-logo"></i>	
 				<span class="dashboard-figure-label" id="rooms"> Rooms </span> 	
 			</div>	
 		</div>
-
-
 	</div><!--group-->
-
-
 
 
 	<div class="col-md-12">
@@ -96,13 +98,13 @@
 				
 		</div><!--end body-->
 	</div><!--end panel-->
+	</div>
+
 </div>
 
 
-
-
 <div class="col-md-12">
-	<div class="panel dash panel-dash">
+	<div class="dash panel-dash">
 		<div class="panel-heading col-xs-12">
 			<div class="col-xs-8">
 				<i class="fa fa-location-arrow fa-2x"></i>
@@ -116,7 +118,8 @@
 		<div class="panel-body">
 			<% @supplier.venues.each do |venue|  %>
 
-			<div class = "col-xs-6 no-pads">
+			<div class = "col-xs-4 no-pads">
+				<%= venue.classification %>
 				<div class="dashboard-card-frame">
 					<% if venue.assets.count > 0 %>
 					<%= image_tag (Venue.find(venue.id).assets.last.photo.url(:index)), class: "dashboard-card-image" %>
@@ -126,6 +129,7 @@
 
 					<div class="dashboard-card-caption">
 						<div class="dashboard-card-name"><%= link_to "#{venue.name}".html_safe, venue_path(venue.id) %> </div>
+
 						<%= link_to '<i class="fa fa-pencil-square-o" style="margin-right: 0.6em;"></i>'.html_safe, edit_venue_path(venue.id) %> 
 						<%= link_to '<i class="fa fa-trash-o"></i>'.html_safe, venue_path(venue.id), method: :delete, confirm: "Are you sure you want to delete this venue?"%>
 						
@@ -138,17 +142,6 @@
 	</div><!--end panel-->
 </div>
 
-<div class="col-md-12">
-	<div class="panel dash panel-dash">
-		<div class="panel-heading">
-			<i class="fa fa-map-marker fa-2x"></i>
-			<span class="announcement-heading">Rooms</span>
-		</div>
-		<div class="panel-body">
-
-		</div><!--panel-body-->
-	</div><!--end panel-->
-</div>
 
 </div><!--first col-->
 
