--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -189,6 +189,12 @@ h1, h2, h3 {
 	border-radius: 0px;
 }
 
+.panel > #body-bookings{
+  padding-left: 0;
+  padding-right: 0;
+
+}
+
 .panel-heading {
 	height: auto;
 }
@@ -1139,7 +1145,7 @@ color: $white;
   -moz-transition: all 0.2s ease;
   -webkit-transition: all 0.2s ease;
 
-   border-bottom: 1px solid rgba(255, 103, 89,0.3);
+  border-bottom: 1px solid #ccc;
 
 }
 
