--- a/app/views/pages/_supplier.html.erb
+++ b/app/views/pages/_supplier.html.erb
@@ -40,9 +40,11 @@
 
 	<div class="col-md-12">
 		<div class="panel dash panel-dash">
-			<div class="panel-heading">
-				<i class="fa fa-bookmark fa-2x"></i> 
-				<span class="announcement-heading"> Recent Pencil Bookings</span>
+			<div class="panel-heading col-xs-12">
+				<div class="col-xs-8">
+					<i class="fa fa-bookmark fa-2x"></i> 
+					<span class="announcement-heading"> Recent Pencil Bookings</span>
+				</div>
 			</div>
 
 			<div class="panel-body" id ="body-bookings">
