--- a/app/views/pages/_user.html.erb
+++ b/app/views/pages/_user.html.erb
@@ -28,7 +28,7 @@
 
     <div class="panel-body">
 
-      <div class = "col-xs-6 no-pads">
+      <div class = "col-xs-4 no-pads">
         <div class="dashboard-card-frame">
    
 
@@ -51,7 +51,7 @@
         </div><!--venue frame-->
       </div><!--col-->
 
-      <div class = "col-xs-6 no-pads">
+      <div class = "col-xs-4 no-pads">
         <div class="dashboard-card-frame">
    
 
@@ -59,7 +59,7 @@
        
 
           <div class="dashboard-card-caption">
-            <div class="dashboard-card-name">Irwin Theater
+            <div class="dashboard-card-name" id="users">Irwin Theater
              </div>
              <div class="dashboard-card-details">
               June 24, 2014<br>
