--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -1036,6 +1036,8 @@ tr#last >td{
 
 }
 
+.dashboard 
+
 .dashboard-card-frame:hover .dashboard-card-image{
  -webkit-transform: scale(1.1);
  -moz-transform: scale(1.1);
@@ -1065,6 +1067,11 @@ tr#last >td{
     font-size: 1.5em;
     padding: 0.5em;
 }
+
+.dashboard-card-frame .dashboard-card-caption .dashboard-card-name#users{
+  
+}
+
 
 
 .dashboard-card-frame .dashboard-card-caption i {
