--- a/app/views/venues/index.html.erb
+++ b/app/views/venues/index.html.erb
@@ -1,61 +1,43 @@
-<h1>Listing venues</h1>
+<div class="container dashboard-wrapper">
 
-<table>
-  <thead>
-    <tr>
-      <th>Name</th>
-      <th>Address</th>
-      <th>Classification</th>
-      <th>Capacity</th>
-      <th>Is featured</th>
-      <th>Location</th>
-      <th>Environment</th>
-      <th>Comments</th>
-      <th>Rates</th>
-      <th>Contact persons</th>
-      <th>Contact numbers</th>
-      <th>Status</th>
-      <th>Booking count</th>
-      <th>Caterers</th>
-      <th>Policy</th>
-      <th>Is booked</th>
-      <th>Freeroom count</th>
-      <th>Email</th>
-      <th>User</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
+  <div class="col-md-12">
+    <div class="dash panel panel-dash">
+      <div class="panel-heading col-xs-12">
+        <div class="col-xs-8">
+          <i class="fa fa-location-arrow fa-2x"></i>
+          <span class="announcement-heading">Venues</span>
+        </div> 
+        <div class="col-xs-4 text-right">
+          <span class="label label-light" style="display: none" id="add-venue-label"> Add Venue</span>
+          <%= link_to '<i class="fa fa-plus-circle fa-2x fa-gray fa-orange"></i>'.html_safe, new_venue_path %> 
+        </div>
+      </div>
+      <div class="panel-body">
+        <% @venues.each do |venue|  %>
 
-  <tbody>
-    <% @venues.each do |venue| %>
-      <tr>
-        <td><%= venue.name %></td>
-        <td><%= venue.address %></td>
-        <td><%= venue.classification %></td>
-        <td><%= venue.capacity %></td>
-        <td><%= venue.is_featured %></td>
-        <td><%= venue.location %></td>
-        <td><%= venue.environment %></td>
-        <td><%= venue.comments %></td>
-        <td><%= venue.rates %></td>
-        <td><%= venue.contact_persons %></td>
-        <td><%= venue.contact_numbers %></td>
-        <td><%= venue.status %></td>
-        <td><%= venue.booking_count %></td>
-        <td><%= venue.caterers %></td>
-        <td><%= venue.policy %></td>
-        <td><%= venue.is_booked %></td>
-        <td><%= venue.freeroom_count %></td>
-        <td><%= venue.email %></td>
-        <td><%= venue.supplier_id %></td>
-        <td><%= link_to 'Show', venue %></td>
-        <td><%= link_to 'Edit', edit_venue_path(venue) %></td>
-        <td><%= link_to 'Destroy', venue, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-      </tr>
-    <% end %>
-  </tbody>
-</table>
+        <div class = "col-xs-4 no-pads">
+        
+          <div class="dashboard-card-frame">
+            <% if venue.assets.count > 0 %>
+            <%= image_tag (Venue.find(venue.id).assets.last.photo.url(:index)), class: "dashboard-card-image" %>
+            <% else %>
+            <img src="http://placehold.it/300x200" class="dashboard-card-image">
+            <% end %>
 
-<br>
+            <div class="dashboard-card-caption">
+              <div class="dashboard-card-name"><%= link_to "#{venue.name}".html_safe, venue_path(venue.id) %> </div>
 
-<%= link_to 'New Venue', new_venue_path %>
+              <%= link_to '<i class="fa fa-pencil-square-o" style="margin-right: 0.6em;"></i>'.html_safe, edit_venue_path(venue.id) %> 
+              <%= link_to '<i class="fa fa-trash-o"></i>'.html_safe, venue_path(venue.id), method: :delete, confirm: "Are you sure you want to delete this venue?"%>
+              
+            </div>
+
+          </div><!--venue frame-->
+
+        </div><!--col-->
+        <% end %>  
+      </div><!--panel-body--> 
+    </div><!--end panel-->
+  </div>
+
+</div>
